# tuya-heatpumpir

./: .gitignore  .gitmodules  Arduino.cpp  Arduino.h  CMakeLists.txt  IRSenderVirt.cpp  IRSenderVirt.h  README.md  main.cpp
